--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mouse.countrystate">
+    package="com.mouse.coustapol">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".demo.DemoApp"
+        android:name="com.mouse.coustapol.demo.DemoApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CountryState">
         <activity
-            android:name=".demo.MainActivity"
+            android:name="com.mouse.coustapol.demo.DemoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,4 @@
             </intent-filter>
         </activity>
     </application>
-
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyCT-UvG80YvcbNJHVVEZXMVTULw8fq8688" />
-
 </manifest>
