--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CountryState"
 include ':app'
-include ':app:country_state'
+include ':app:coustapol'
